[package]
name = "ezwel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
reqwest = { version = "^0.11", features = ["cookies", "json"] }
anyhow = { version = "^1.0" }
base64 = { version = "^0.13" }
regex = { version = "^1.0" }
serde_json = { version = "^1.0" }
num-format = { version = "^0.4" }
chrono = { version = "^0.4" }